--- a/customizations/tmux.conf
+++ b/customizations/tmux.conf
@@ -3,7 +3,7 @@
 # Set the default terminal to xterm with 256 colors
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",*256col*:Tc"
-set -g default-command "reattach-to-user-namespace -l $SHELL"
+#set -g default-command "reattach-to-user-namespace -l $SHELL"
 
 # Change prefix
 set -g prefix C-a
@@ -87,5 +87,5 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-capture-pane-contents 'on'
-
+set -g @plugin 'erikw/tmux-powerline'
 run '~/.tmux/plugins/tpm/tpm'
