wicked cool file finder

--- a/customizations/tmux.conf
+++ b/customizations/tmux.conf
@@ -1,5 +1,7 @@
 # Tmux Configuration File
 
+# In .zshrc, setting 'setopt share_history' fixed all of the history issues that come of having various panes, and has had several unexpected positive side effects.
+
 # Set the default terminal to xterm with 256 colors
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",*256col*:Tc"
