--- a/.gitignore
+++ b/.gitignore
@@ -10,23 +10,27 @@
 # Ignore specific files
 #README.md
 notes/active_directory.md
+notes/active_information_gathering.md
 notes/attacking_ad.md
+notes/client_side_attacks.md
+notes/common_web_attacks.md
 notes/file_inclusion.md
 notes/lateral_movement_windows.md
 notes/linux_privesc_guide.md
 notes/metasploit.md
 notes/passive_information_gathering.md
+notes/port_redirection_and_tunneling.md
 notes/metasploit.md
 notes/peer_notes.md
 notes/postexploitation.md
 notes/s1ren_report_format.md
+notes/sql_injections.md
 notes/tunneling_deep_packet_inspection.md
 notes/vulnerability_scanning.md
 notes/metasploit.md
 notes/web_assessment_and_xss.md
 notes/windows_privesc.md
 notes/windows_privesc_guide.md
-notes/metasploit.md
 
 # Exception rules for ignoring
 #notes/*
